main page 반응형 수정
main page 반응형으로 수정 중

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -116,7 +116,7 @@
         #container .dream_factory button a {
             display: block;
             width: 200px;
-            line-height: 50px;
+            line-height: 45px;
             color: white;
         }
 
@@ -131,7 +131,7 @@
             background: #bbe5fb;
             background: url('img/block02_bg_ani.jpg');
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: center top;
             overflow: hidden;
             position: relative;
         }
@@ -146,7 +146,7 @@
             font-size: 40px;
             text-align: center;
             padding-top: 80px;
-            font-weight: 100;
+            font-weight: 200;
             font-family: 'Nunito Sans', sans-serif;
             margin-bottom: 40px;
         }
@@ -168,7 +168,7 @@
 
         #container .menu_banner button a {
             width: 200px;
-            line-height: 50px;
+            line-height: 45px;
             display: block;
             color: #243C86;
             font-size: 1.1em;
@@ -184,7 +184,7 @@
             top: 0;
             width: 50%;
             height: 800px;
-            border:10px solid lime;
+            border: 10px solid lime;
         }
 
         #container .menu_banner .ani_object02 {
@@ -193,11 +193,7 @@
             right: 0;
             width: 50%;
             height: 800px;
-            border:10px solid blue;
-        }
-
-        #container .menu_banner img {
-            /* width:10%; */
+            border: 10px solid blue;
         }
 
         @keyframes ani1 {
@@ -350,26 +346,33 @@
         /* FRANCHISE BANNER */
         #container .franchise {
             background: url('img/company_bg.jpg');
+            background-position: top;
             height: 460px;
             position: relative;
+            width: 100%;
         }
 
         #container .franchise .franchise_info {
             color: white;
-            width: 500px;
+            width: 45%;
             text-align: center;
             position: absolute;
-            right: 0;
+            right: 100px;
             top: 100px;
+            background-color: tomato;
         }
 
         #container .franchise .franchise_info p:nth-child(1) {
-            font-size: 3rem;
+            font-size: 2.7rem;
+            width: 550px;
         }
 
         #container .franchise .franchise_info p:nth-child(2) {
-            margin-top: 40px;
+            /* margin-top: 40px; */
             line-height: 25px;
+            width: 350px;
+            margin: 40px auto;
+            text-align: left;
         }
 
         #container .franchise .franchise_info button {
@@ -383,9 +386,8 @@
         #container .franchise .franchise_info button a {
             color: #fff;
             width: 200px;
-            height: 50px;
             display: block;
-            line-height: 50px;
+            line-height: 45px;
         }
 
         #container .franchise .franchise_info button a:hover {
@@ -419,26 +421,39 @@
 
         #container .culture_lab .culture_lab_line {
             background-image: url('img/block03_line.png');
+            background-position: center;
             width: 100%;
             height: 178px;
             position: absolute;
-            top: 400px;
+            top: 350px;
+        }
+
+        #container .culture_lab ul{
+            display:flex;
+            justify-content: space-around;
+            border:1px solid blue;
+            width:80%;
+            margin: 0 auto;
+            margin-top:300px;
+        }
+
+        #container .culture_lab ul li{
+            width:33.3333%;
+            border:1px solid lime;
         }
 
         #container .icon1 {
-            position: absolute;
-            top: 500px;
-            left: 550px;
+            background-color: tomato;
         }
 
-        @keyframes icon1_ani {
+        /* @keyframes icon1_ani {
             from {}
 
             to {
                 top: 495px;
                 left: 550px;
             }
-        }
+        } */
 
         #container .culture_lab .icon1:hover {
             animation-name: icon1_ani;
@@ -449,9 +464,7 @@
         }
 
         #container .culture_lab .icon2 {
-            position: absolute;
-            left: 880px;
-            top: 430px;
+            
         }
 
         @keyframes icon1_an2 {
@@ -472,9 +485,7 @@
         }
 
         #container .culture_lab .icon3 {
-            position: absolute;
-            top: 500px;
-            right: 550px;
+            
         }
 
         @keyframes icon1_an3 {
@@ -723,6 +734,11 @@
         /* 640px이하 */
         @media screen and (max-width:640px) {
 
+            /* 공통 */
+            #container .line {
+                display: none;
+            }
+
             /* header */
             #header .nav {
                 font-size: 0;
@@ -740,7 +756,7 @@
             /* 드림 팩토리 */
             #container .dream_factory {
                 flex: none;
-                background: tomato;
+                background: blue;
                 height: 100vw;
             }
 
@@ -766,37 +782,115 @@
             }
 
             /* 메뉴 배너 */
-            /* #container .menu_banner {
-                background-color: tomato;
+            #container .menu_banner {
+                height: 110vw;
             }
 
             #container .menu_banner P:nth-child(1) {
+                padding-top: 60px;
+                font-size: 1.9rem;
+            }
+
+            #container .menu_banner .bold {
+                display: block;
                 font-size: 2rem;
-                text-align: center;
+                /* letter-spacing: 1px; */
             }
 
             #container .menu_banner P:nth-child(3) {
-                font-size: 1.2rem;
+                font-size: 1.2rem
+            }
+
+            #container .menu_banner .ani_object01 {
+                top: 50px;
+                left: -300px;
+                border: 10px solid tomato;
+            }
+
+            #container .menu_banner .ani_object02 {
+                top: 120px;
+                border: 10px solid tomato;
+            }
+
+            #container .menu_banner .ani_object01 img:nth-child(1) {
+                width: 20%;
+                margin: 130px 0 0 120px;
+            }
+
+            #container .menu_banner .ani_object01 img:nth-child(2) {
+                width: 15%;
+                margin: 70px 0 0 80px;
+            }
+
+            #container .menu_banner .ani_object01 img:nth-child(3) {
+                width: 60%;
+            }
+
+            #container .menu_banner .ani_object02 img:nth-child(1) {
+                width: 140%;
+                left: 0px;
+            }
+
+            #container .menu_banner .ani_object02 img:nth-child(2) {
+                width: 15%;
+                left: 120px;
+                margin-top: 80px;
+            }
+
+            #container .menu_banner .ani_object02 img:nth-child(3) {
+                width: 9%;
+                left: 200px;
+            }
+
+            #container .menu_banner .ani_object02 img:nth-child(4) {
+                width: 9%;
+                left: 230px;
             }
 
             /* 프랜차이즈 */
-            #container .franchise .franchise_info button {
-                display: block;
-                margin: 10px auto;
+            #container .franchise {
+                background-image: url('img/company_bg_m.jpg');
+                background-position: center;
+                width: 100%;
+            }
+
+            #container .franchise .franchise_info {
+                position: static;
+                margin: 0 auto;
+                padding-top: 50px;
+                width: 80%;
+            }
+
+            #container .franchise .franchise_info p:nth-child(1) {
+                font-size: 1.6rem;
+                line-height: 35px;
+                width: 320px;
+                margin: 0 auto;
             }
 
             #container .franchise .franchise_info p:nth-child(2) {
-                width: 80%;
+                width: 350px;
+                margin: 20px auto;
+                text-align: center;
+                /* width: 80%; */
                 margin: 40px auto;
                 line-height: 1.5rem;
                 text-align: center;
             }
 
-            */
+            #container .franchise .franchise_info button {
+                display: block;
+                margin: 10px auto;
+            }
         }
 
         /* 641px 이상 980px이하 */
         @media screen and (min-width:641px) and (max-width:980px) {
+
+            /* 공통 */
+            #container .line {
+                display: none;
+            }
 
             /* header */
             #header .nav {
@@ -841,33 +935,86 @@
             }
 
             /* 메뉴 섹션 */
+            #container .menu_banner {
+                height: 80vw;
+            }
+
             #container .menu_banner .ani_object01 {
                 top: 50px;
-                left:-200px;
+                left: -200px;
                 border: 10px solid lime;
-                /* height:300px; */
             }
 
             #container .menu_banner .ani_object02 {
                 top: 120px;
-                right:150px;
                 border: 10px solid blue;
-                /* height:300px; */
             }
 
-            #container .menu_banner .ani_object01 img:nth-child(1),
-            #container .menu_banner .ani_object01 img:nth-child(2){
-                width:15%;
+            #container .menu_banner .ani_object01 img:nth-child(1) {
+                width: 15%;
+                margin: 130px 0 0 120px;
             }
 
-            #container .menu_banner .ani_object01 img:nth-child(3){
-                width:50%;
+            #container .menu_banner .ani_object01 img:nth-child(2) {
+                width: 10%;
+                margin: 70px 0 0 100px;
             }
 
-            #container .menu_banner .ani_object02 img:nth-child(1){
-                width:100%;
+            #container .menu_banner .ani_object01 img:nth-child(3) {
+                width: 50%;
             }
 
+            #container .menu_banner .ani_object02 img:nth-child(1) {
+                width: 120%;
+                left: 0px;
+            }
+
+            #container .menu_banner .ani_object02 img:nth-child(2) {
+                width: 12%;
+                left: 120px;
+                margin-top: 80px;
+            }
+
+            #container .menu_banner .ani_object02 img:nth-child(3) {
+                width: 9%;
+                left: 200px;
+            }
+
+            #container .menu_banner .ani_object02 img:nth-child(4) {
+                width: 9%;
+                left: 230px;
+            }
+
+            /* 프랜차이즈 섹션 */
+            #container .franchise {
+                background-image: url('img/company_bg_m.jpg');
+                background-position: center;
+                width: 100%;
+            }
+
+            #container .franchise .franchise_info {
+                position: static;
+                margin: 0 auto;
+                padding-top: 50px;
+                width: 80%;
+            }
+
+            #container .franchise .franchise_info p:nth-child(1) {
+                font-size: 1.6rem;
+                line-height: 35px;
+                width: 320px;
+                margin: 0 auto;
+            }
+
+            #container .franchise .franchise_info p:nth-child(2) {
+                width: 350px;
+                margin: 20px auto;
+                text-align: center;
+            }
+
+            #container .franchise .franchise_info button {
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
@@ -1006,24 +1153,26 @@
                 <p>EDIYA <span class="bold">CULTURE LAB</span></p>
                 <P>커피를 더 특별하게 만드는 문화가 시작되는 공간</P>
                 <div class="culture_lab_line"></div>
-                <div class="culture_lab_icon icon1">
-                    <a href="#">
-                        <img src="img/block03_icon01.png" alt="">
-                        <p>이디야 뮤직 페스타</p>
-                    </a>
-                </div>
-                <div class="culture_lab_icon icon2">
-                    <a href="">
-                        <img src="img/block03_icon02.png" alt="">
-                        <p>컬쳐랩 시설대관</p>
-                    </a>
-                </div>
-                <div class="culture_lab_icon icon3">
-                    <a href="">
-                        <img src="img/block03_icon03.png" alt="">
-                        <p>이디야 컬쳐랩</p>
-                    </a>
-                </div>
+                <ul>
+                    <li class="culture_lab_icon icon1">
+                        <a href="#">
+                            <img src="img/block03_icon01.png" alt="">
+                            <p>이디야 뮤직 페스타</p>
+                        </a>
+                    </li>
+                    <li class="culture_lab_icon icon2">
+                        <a href="">
+                            <img src="img/block03_icon02.png" alt="">
+                            <p>컬쳐랩 시설대관</p>
+                        </a>
+                    </li>
+                    <li class="culture_lab_icon icon3">
+                        <a href="">
+                            <img src="img/block03_icon03.png" alt="">
+                            <p>이디야 컬쳐랩</p>
+                        </a>
+                    </li>
+                </ul>
             </div>
 
             <!-- COFFEE LAB BANNER -->
